# crewai_react_creator

./: README.md  pyproject.toml
src/react_project/: crew.py  main.py
src/react_project/config/: agents.yaml  tasks.yaml
src/react_project/tools/: component_generator.py  context_generator.py  hook_generator.py  project_generator.py
