[tool.poetry]
name = "react_project"
version = "0.1.0"
description = "react_project using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
react_project = "react_project.main:run"
run_crew = "react_project.main:run"
train = "react_project.main:train"
replay = "react_project.main:replay"
test = "react_project.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
